--- a/mc-server/Dockerfile.template
+++ b/mc-server/Dockerfile.template
@@ -2,8 +2,9 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:latest
 
 ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
 
-RUN apt-get update && apt-get install -y apt-transport-https
-RUN install_packages wget jq openjdk-17-jre
+RUN install_packages wget
+RUN install_packages jq 
+RUN install_packages openjdk-17-jre 
 
 COPY . /
 
