--- a/mc-server/Dockerfile.template
+++ b/mc-server/Dockerfile.template
@@ -4,7 +4,7 @@ ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
 
 RUN install_packages wget
 RUN install_packages jq 
-RUN install_packages openjdk-17-jre 
+RUN install_packages default-jre 
 
 COPY . /
 
