--- a/mc-server/Dockerfile.template
+++ b/mc-server/Dockerfile.template
@@ -1,10 +1,11 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:bookworm
+#FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:latest
+FROM balenalib/generic-amd64-debian:latest
 
 ENV DBUS_SYSTEM_BUS_ADDRESS=unix:path=/host/run/dbus/system_bus_socket
 
 RUN install_packages wget
 RUN install_packages jq 
-RUN install_packages default-jre 
+RUN install_packages openjdk-17-jre 
 
 COPY . /
 
